B<debug_dns>, B<srcaddr>, B<srcport>.

=item * modules L<B<DNSZone>|P9::AA::Check::DNSZone> and L<B<DNSZoneConsistency>|P9::AA::Check::DNSZoneConsistency> now
accept comma separated list of zone names in B<zone> parameter. 

=item * module L<B<JSON>|P9::AA::Check::JSON> now supports json structure checks using regular expressions with
parameters B<content_pattern> and B<content_pattern_match>

=item * Added Win32, OS/2 support to L<P9::AA::Config>

=back

=head2 1.1.1

=over

=item * new module L<B<ArecaRAID>|P9:AA::Check::ArecaRAID> - L<Areca|http://www.areca.com.tw> hardware RAID checking module

=back

=head2 1.1.0

=over

=item * feature: command line/nagios/icinga client can now read check parameters in JSON format from file or stdin

=item * feature: command line client can now display readme, credits and changelog documentation

=item * new module L<B<ApacheSolr>|P9::AA::Check::ApacheSolr> - checks your L<Apache Solr|http://lucene.apache.org/solr> server :)

=item * new module L<B<HAProxy>|P9::AA::Check::HAProxy> - check your L<HAProxy|http://haproxy.wt1.eu> load balancer.

=item * new module L<B<StackedCheck>|P9::AA::Check::StackedCheck> - perform complex checks embeding other check modules.

=item * modules L<B<DBI>|P9::AA::Check::DBI>, L<B<DBIReplication>|P9::AA::Check::DBIReplication>; minor Icinga/Nagios related fixes (replace \; with ; in DSN specification).

=item * module L<B<DBIReplication>|P9::AA::Check::DBIReplication>: new parameters: B<table_name> - ability specify replication table name;
B<two_way> - two-way replication check

=item * module L<B<URL>|P9::AA::Check::URL>: new parameter: B<redirects> - maximum number of allowed redirects

=item * module: L<B<Mount>|P9::AA::Check::Mount> - implemented LABEL/UUID support on Linux platform

=item * module: L<B<Process>|P9::AA::Check::Process> - implemented parameter B<max_process_count>.
