@@ -21,6 +21,9 @@ accept comma separated list of zone names in B<zone> parameter.
 =item * module L<B<JSON>|P9::AA::Check::JSON> now supports json structure checks using regular expressions with
 parameters B<content_pattern> and B<content_pattern_match>
 
+=item * module L<B<XML>|P9::AA::Check::XML> now supports XML structure checks using regular expressions with
+parameters B<content_pattern> and B<content_pattern_match>
+
 =item * Added Win32, OS/2 support to L<P9::AA::Config>
 
 =back
